[workspace]
members = [
    "imix",
    "golem",
    "lib/eldritch",
    "lib/transport",
    "lib/pb",
    "lib/host_unique",
]
resolver = "2"

[workspace.dependencies]
transport = { path = "./lib/transport" }
eldritch = { path = "./lib/eldritch" }
host_unique = { path = "./lib/host_unique" }
pb = { path = "./lib/pb" }

aes = "0.8.3"
allocative = "0.3.2"
allocative_derive = "0.3.2"
anyhow = "1.0.65"
assert_cmd = "2.0.6"
async-recursion = "1.0.0"
async-trait = "0.1.68"
base64 = "0.21.4"
chrono = "0.4.34"
clap = "3.2.23"
netdev = "0.33.0"
derive_more = "=0.99.17"
eval = "0.4.3"
flate2 = "1.0.24"
gazebo = "0.8.1"
glob = "0.3.1"
graphql_client = "0.12.0"
hex = "0.4.2"
hex-literal = "0.4.1"
httptest = "0.15.4"
hyper = { version = "1", features = ["full"] }
ipnetwork = "0.20.0"
itertools = "0.10"
listeners = "0.2"
lsp-types = "0.93.0"
log = "0.4.20"
md5 = "0.7.0"
mockall = "0.12.1"
network-interface = "1.0.1"
nix = "0.26.1"
notify = "6.1.1"
object = "0.31.1"
openssl = "0.10.55"
pnet = "0.34.0"
portable-pty = "0.8.1"
predicates = "2.1"
pretty_env_logger = "0.5.0"
prost = "0.12"
prost-types = "0.12"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.5.5"
reqwest = "0.11.18"
russh = "0.37.1"
russh-sftp = "=2.0.8" # `thiserror` dependcy in older versions causes downstream issues in other libraries.
russh-keys = "0.37.1"
rust-embed = "8.5.0"
serde = "1.0"
serde_json = "1.0.87"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha256 = "1.0.3"
starlark = "0.12.0"
starlark_derive = "0.12.0"
structopt = "0.3.23"
sys-info = "0.9.1"
sysinfo = "0.29.7"
tar = "0.4.38"
tempfile = "3.3.0"
tera = "1.17.1"
thiserror = "1.0.30"
tokio = "1.19.1"
tokio-stream = "0.1.9"
tokio-test = "*"
tokio-util = { version = "0.7.10", features = ["io"] }
tonic = { git = "https://github.com/hyperium/tonic.git", rev = "07e4ee1" }
tonic-build = "0.10"
trait-variant = "0.1.1"
uuid = "1.5.0"
which = "4.4.2"
whoami = "1.5.1"
windows-service = "0.6.0"
windows-sys = "0.45.0"
winreg = "0.51.0"


[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[profile.rust-analyzer]
inherits = "dev"
