[workspace]
members = [
    "imix",
    "golem",
    "lib/transport",
    "lib/pb",
    "lib/host_unique",
    "lib/netstat",
    "lib/eldritch/eldritch-core",
    "lib/eldritch/eldritch-macros",
    "lib/eldritch/eldritch-repl",
    "lib/eldritch/eldritch-agent",
    "lib/eldritch/stdlib/eldritch-libagent",
    "lib/eldritch/stdlib/eldritch-libassets",
    "lib/eldritch/stdlib/eldritch-libcrypto",
    "lib/eldritch/stdlib/eldritch-libfile",
    "lib/eldritch/stdlib/eldritch-libhttp",
    "lib/eldritch/stdlib/eldritch-libpivot",
    "lib/eldritch/stdlib/eldritch-libprocess",
    "lib/eldritch/stdlib/eldritch-librandom",
    "lib/eldritch/stdlib/eldritch-libregex",
    "lib/eldritch/stdlib/eldritch-libreport",
    "lib/eldritch/stdlib/eldritch-libsys",
    "lib/eldritch/stdlib/eldritch-libtime",
    "lib/eldritch/eldritch",
    "lib/portals/portal-stream",
]
exclude = [
    "lib/eldritch/stdlib/tests",  # Excluded to prevent fake_bindings from polluting workspace builds
]
resolver = "2"

[workspace.dependencies]
transport = { path = "./lib/transport" }
host_unique = { path = "./lib/host_unique" }
pb = { path = "./lib/pb" }
netstat = { path = "./lib/netstat" }

# Eldritch V2
eldritch-core = {path = "lib/eldritch/eldritch-core", default-features = false }
eldritch-macros = {path = "lib/eldritch/eldritch-macros", default-features = false}
eldritch-repl = {path = "lib/eldritch/eldritch-repl", default-features = false}
eldritch = {path = "lib/eldritch/eldritch", default-features = false}
eldritch-agent = {path = "lib/eldritch/eldritch-agent"}
eldritch-libagent = {path = "lib/eldritch/stdlib/eldritch-libagent", default-features = false}
eldritch-libassets = {path = "lib/eldritch/stdlib/eldritch-libassets", default-features = false}
eldritch-libcrypto = {path = "lib/eldritch/stdlib/eldritch-libcrypto",default-features = false }
eldritch-libfile = {path = "lib/eldritch/stdlib/eldritch-libfile",default-features = false }
eldritch-libhttp = {path = "lib/eldritch/stdlib/eldritch-libhttp",default-features = false }
eldritch-libpivot = {path = "lib/eldritch/stdlib/eldritch-libpivot",default-features = false }
eldritch-libprocess = {path = "lib/eldritch/stdlib/eldritch-libprocess",default-features = false }
eldritch-librandom = {path = "lib/eldritch/stdlib/eldritch-librandom", default-features = false }
eldritch-libregex = {path = "lib/eldritch/stdlib/eldritch-libregex",default-features = false }
eldritch-libreport = {path = "lib/eldritch/stdlib/eldritch-libreport",default-features = false }
eldritch-libsys = {path = "lib/eldritch/stdlib/eldritch-libsys",default-features = false }
eldritch-libtime = {path = "lib/eldritch/stdlib/eldritch-libtime",default-features = false }
portal-stream = { path = "lib/portals/portal-stream" }

aes = "0.8.3"
allocative = "0.3.2"
allocative_derive = "0.3.2"
anyhow = "1.0.65"
assert_cmd = "2.0.6"
async-recursion = "1.0.0"
async-trait = "0.1.68"
base32 = "0.5"
base64 = "0.21.4"
byteorder = "1.5"
chrono = "0.4.34"
const-decoder = "0.3.0"
clap = "3.2.23"
criterion = "0.5"
netdev = "0.33.0"
derive_more = "=0.99.17"
eval = "0.4.3"
walkdir = "2.5.0"
flate2 = { version = "1.0.24", default-features = false }
gazebo = "0.8.1"
glob = "0.3.1"
graphql_client = "0.12.0"
hex = "0.4.2"
hex-literal = "0.4.1"
http = "1.4.0"
httptest = "0.15.4"
hyper = { version = "1", features = ["full"] }
ipnetwork = "0.20.0"
itertools = "0.14.0"
libc = "0.2"
libm = "0.2.15"
listeners = "0.2"
lsp-types = "0.93.0"
log = "0.4.20"
md5 = "0.7.0"
mockall = "0.12.1"
local-ip-address = "0.6.5"
nix = "0.26.1"
notify = "6.1.1"
object = "0.31.1"
pnet = "0.34.0"
portable-pty = "0.8.1"
predicates = { version = "2.1", default-features = false }
pretty_env_logger = "0.5.0"
prost = "0.12"
prost-types = "0.12"
rand = "0.8.5"
rand_chacha = { version = "0.3.1", default-features = false, features = ["std"]}
regex = { version = "1.5.5", default-features = false}
reqwest = { version = "0.12.15", default-features = false }
russh = "0.37.1"
russh-sftp = "=2.0.8" # `thiserror` dependcy in older versions causes downstream issues in other libraries.
russh-keys = "0.37.1"
rustls = "0.23"
rust-embed = "8.5.0"
serde = "1.0"
serde_json = "1.0.87"
serde_yaml = "0.9"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha256 = { version = "1.0.3", default-features = false }
spin = { version = "0.10.0", features = ["mutex", "spin_mutex", "rwlock"] }
starlark = "0.12.0"
starlark_derive = "0.12.0"
structopt = "0.3.23"
sysinfo = { version = "0.29.7", default-features = false }
tar = { version = "0.4.38", default-features = false }
tempfile = "3.20.0"
tera = { version = "1.17.1", default-features = false }
thiserror = "1.0.30"
tokio = "1.49.0"
tokio-stream = { version = "0.1.9", default-features = false }
tokio-test = "*"
tokio-util = { version = "0.7.10", features = ["io"] }
tonic = { version = "0.14.3" }
tonic-prost-build = { version = "0.14.3" }
tower = "0.5.3"
trait-variant = "0.1.1"
uuid = "1.5.0"
urlencoding = "2.1.3"
static_vcruntime = "2.0"
url = "2.5"
which = "4.4.2"
whoami = { version = "1.5.1", default-features = false }
windows-service = "0.6.0"
windows-sys = "0.61.2"
winreg = "0.51.0"
chacha20poly1305 = "0.10.1"
bytes = "1.6.0"
x25519-dalek = "2.0.1"
lru = "0.16.0"
crossterm = "0.27"
futures = "0.3"
console-subscriber = "0.5.0"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[profile.rust-analyzer]
inherits = "dev"
