[package]
name = "eldritch"
version = "0.1.0"
edition = "2021"

[dependencies]
starlark = { git = "https://github.com/hulto/starlark-rust", rev = "b38dd5ff90b68e4e2eb5cd77c3241bb29b9b326d" }
tempfile = "3.3.0"
anyhow = "1.0.55"
derive_more = "0.99.17"
sha256 = "1.0.3"
sysinfo = "0.23.6"
regex = "1.5.5"
reqwest = { version = "0.11.0" , features = ["blocking"] }
httptest = "0.15.4"
tokio = "1.19.1"