[package]
name = "eldritch"
version = "0.1.0"
edition = "2021"

[dependencies]
starlark = { git = "https://github.com/facebookexperimental/starlark-rust", branch = "main" }
tempfile = "3.3.0"
anyhow = "1.0.55"
derive_more = "0.99.17"
sha256 = "1.0.3"
sysinfo = "0.23.6"
regex = "1.5.5"
reqwest = { version = "0.11.0" , features = ["blocking", "stream"] }
httptest = "0.15.4"
tokio = { version = "1.19.1" , features = ["macros"] }
tokio-stream = "0.1.9"
