[package]
name = "golem"
version = "0.3.4"
edition = "2024"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
pb = { workspace = true }
crossterm = { workspace = true }
walkdir = {workspace = true}
rust-embed = { workspace = true }
eldritch-core = { workspace = true }
eldritch-macros = { workspace = true }
eldritch = { workspace = true, features = ["std", "stdlib", "fake_agent"] }
eldritch-agent = { workspace = true }
# Need fake here so we import this on its own
tokio.workspace = true
futures.workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
static_vcruntime = { workspace = true }

[features]
verbose-logging = ["pb/verbose-logging", "eldritch-core/verbose-logging", "eldritch-macros/verbose-logging", "eldritch/verbose-logging", "eldritch-agent/verbose-logging"]
