[package]
name = "golemv2"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
pb = { workspace = true }
walkdir = "2.5.0"
rust-embed = { workspace = true }
eldritch-core = { workspace = true }
eldritchv2 = { workspace = true, features = ["std", "stdlib"] }
eldritch-repl = { workspace = true }
eldritch-libagent = { workspace = true, features = ["stdlib"] }
eldritch-libassets = { workspace = true, features = ["stdlib"] }