[package]
name = "imix"
version = "0.3.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
# Check if compiled by imix
win_service = []
default = ["transport/grpc", "config/grpc"]
http1 = ["transport/http1", "config/http1"]
dns = ["transport/dns", "config/dns"]

[dependencies]
eldritch = { workspace = true, features = ["imix"] }

pb = { workspace = true, features = ["imix"]}
config = { workspace = true }
transport = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
pretty_env_logger = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.6.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
static_vcruntime = { workspace = true }

[dev-dependencies]
httptest = { workspace = true }
tempfile = { workspace = true }
env_logger = "0.11.2"
