[package]
name = "imix"
version = "0.3.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["install", "grpc", "http1", "dns", "doh"]
grpc = ["transport/grpc"]
http1 = ["transport/http1"]
dns = ["transport/dns"]
doh = ["transport/doh"]
win_service = []
install = []
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
    "io-util",
    "tracing",
] }
portal-stream = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
crossterm = { workspace = true }
prost-types = { workspace = true }
pretty_env_logger = { workspace = true }
eldritch = { workspace = true, features = ["std", "stdlib"] }
eldritch-agent = { workspace = true }
transport = { workspace = true }
pb = { workspace = true, features = ["imix"] }
rust-embed = { workspace = true }
console-subscriber = { workspace = true, optional = true }
rand = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = { workspace = true }

[target.'cfg(not(target_os = "solaris"))'.dependencies]
portable-pty = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
static_vcruntime = { workspace = true }

[dev-dependencies]
transport = { workspace = true, features = ["mock", "grpc"] }
