[package]
name = "imix"
version = "0.3.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["install", "grpc", "http1", "dns", "doh"]
grpc = ["transport/grpc"]
http1 = ["transport/http1"]
dns = ["transport/dns"]
doh = ["transport/doh"]
win_service = []
install = []
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
tokio = { workspace = true, features = [
    "rt",
    "macros",
    "sync",
    "time",
    "net",
    "io-util",
    "tracing",
] }
portal-stream = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
crossterm = { workspace = true }
prost-types = { workspace = true }
pretty_env_logger = { workspace = true }
eldritch = { workspace = true, features = ["std", "stdlib"] }
eldritch-agent = { workspace = true }
transport = { workspace = true }
pb = { workspace = true, features = ["imix"] }
portable-pty = { workspace = true }
rust-embed = { workspace = true }
console-subscriber = { workspace = true, optional = true }
rand = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
shelter = "=0.1.2"
windows-service = { workspace = true }
windows = { version = "0.51.1", features = ["Win32_System_Threading"] }
dinvoke_rs = "=0.2.0"
dinvoke = "=0.2.0"
dinvoke_data = "=0.2.0"
dinvoke_overload = "=0.2.0"
dmanager = "=0.2.0"
manualmap = "=0.2.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
static_vcruntime = { workspace = true }

[dev-dependencies]
transport = { workspace = true, features = ["mock", "grpc"] }
