[package]
name = "imixv2"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["install", "grpc", "http1", "dns", "doh", "events"]
grpc = ["transport/grpc"]
http1 = ["transport/http1"]
dns = ["transport/dns"]
doh = ["transport/doh"]
win_service = []
install = []
events = []
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
    "io-util",
    "tracing",
    "signal",
] }
portal-stream = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
crossterm = { workspace = true }
prost-types = { workspace = true }
pretty_env_logger = { workspace = true }
eldritch-core = { workspace = true }
eldritchv2 = { workspace = true, features = ["std", "stdlib"] }
eldritch-repl = { workspace = true }
eldritch-agent = { workspace = true }
eldritch-libagent = { workspace = true, features = ["stdlib"] }
eldritch-libassets = { workspace = true, features = ["stdlib"] }
transport = { workspace = true }
pb = { workspace = true, features = ["imix"] }
portable-pty = { workspace = true }
rust-embed = { workspace = true }
console-subscriber = { workspace = true, optional = true }
libc = { workspace = true }
nix = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
signal-hook = { version = "0.3", features = ["extended-siginfo"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
static_vcruntime = { workspace = true }

[dev-dependencies]
transport = { workspace = true, features = ["mock", "grpc"] }
