[package]
name = "eldritch-lang"
edition = "2021"
version = "0.3.2"
license = "GNU GPL v3.0"
description = "Eldritch Language Server."
documentation = "https://docs.realm.pub/eldritch"
repository = "https://github.com/kcarretto/eldritch"
authors = [
    "Kyle Carretto <kcarretto@gmail.com>",
    "Nick O'Brian <ndo9903@rit.edu>"
]
keywords = ["realm", "red team", "redteam", "implant", "dsl"]
categories = ["parser-implementations", "development-tools"]

[build-dependencies]
lalrpop = "0.19"

[dependencies]
eldritch = { path = "../../cmd/implants/eldritch" }
annotate-snippets = { version = "0.3.2", features = ["color"] }
anyhow = "1.0.51"
derivative = "2.1.1"
derive_more = "0.99"
lalrpop-util = "0.19.1"
indexmap = { version = "1.6", features = ["serde-1"] }
indenter = { version = "0.3.2", features = ["std"] }
indoc = "1.0"
itertools = "0.9"
once_cell = "1.3"
bumpalo = "3.8"
paste = "1.0"
either = "1.6.1"
fnv = "1.0.7"
static_assertions = "1.1.0"
memoffset = "0.6.4"
thiserror = "1.0.9"
starlark = "0.6.0"
starlark_derive = "0.6.0"
# @oss-disable: gazebo = { path = "../../gazebo/gazebo", features = ["str_pattern_extensions"] }
gazebo = { version = "0.3.2", features = ["str_pattern_extensions"] } # @oss-enable
# @oss-disable: gazebo_lint = { path = "../../gazebo_lint/gazebo_lint", optional = true }
gazebo_lint = { version = "0.1", optional = true } # @oss-enable
structopt = "0.3.0"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
logos = "0.11.4"
serde_json = "1.0"
rustyline = "7.0.0"
maplit = "1.0.2"
lsp-server = "0.5"
lsp-types = "0.89.0"
debugserver-types = "0.5.0"
hashbrown = { version = "0.11.2", features = ["raw"] }
textwrap = "0.14.2"
regex = "1.5.4"
strsim = "0.10.0"
argfile = "0.1.0"

[dev-dependencies]
criterion = "0.3"
rand      = { version = "0.3.2", features = ["small_rng"] }

[features]
# @oss-disable: default = ["gazebo_linter"]
gazebo_linter = ["gazebo_lint"]

[[bin]]
name = "eldritch-lang"
path = "src/main.rs"

