[package]
name = "imix"
version = "0.1.0"
edition = "2021"

[dependencies]
eldritch = { path = "../eldritch" }
clap = { version = "3.0" }
rand = "0.8.5"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-timeout = "0.4"
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }