[package]
name = "eldritch"
version = "0.3.1"
edition = "2021"

[features]
# Check if compiled by imix
imix = []
print_stdout = []

[dependencies]
pb = { workspace = true }
transport = { workspace = true }
netstat = { workspace = true }

generic-array = "=0.14.7"
aes = { workspace = true }
allocative = { workspace = true }
anyhow = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
eval = { workspace = true }
flate2 = { workspace = true }
glob = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
ipnetwork = { workspace = true }
log = { workspace = true }
md5 = { workspace = true }
notify = { workspace = true }
portable-pty = { workspace = true }
pretty_env_logger = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "stream",
    "http2",
] }
russh = { workspace = true }
russh-sftp = { workspace = true }
russh-keys = { workspace = true }
rust-embed = { workspace = true, features = ["compression"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
sha256 = { workspace = true }
starlark = { workspace = true }
starlark_derive = { workspace = true }
sysinfo = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
whoami = { workspace = true }
local-ip-address = { workspace = true }
nix = { workspace = true }

# WINDOWS
[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }
object = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
] }

# NOT WINDOWS
[target.'cfg(not(windows))'.dependencies]
pnet = { workspace = true }


# DEV
[dev-dependencies]
transport = { workspace = true, features = ["mock"] }
httptest = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# BUILD
[build-dependencies]
tonic-build = { workspace = true }
anyhow = { workspace = true }
which = { workspace = true }
